# Dual-RAG-Evaluator

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  Doxyfile  FINAL_VERIFICATION_CHECKLIST.md  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  RUN_GUIDE.md  SECURITY.md  TEST_REPORT_FINAL.md  TORCH_DLL_FIX.md  VERIFICATION_COMPLETE.md  VERIFICATION_FINAL.md  conftest.py  demo.py  demo_comparison_results.txt  demo_comparison_with_scores.py  demo_full_comparison.py  demo_simple.py  docker-compose.yml  gui_demo_web.py  gui_web.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_gui.bat  run_gui.ps1  setup.bat  setup.py  setup.sh  (+3 more)
.github/workflows/: ci-cd.yml
config/: .env.template  negation_words.txt
docs/: conf.py  index.md
docs/guides/: .copilot-instructions.md  API_INTEGRATION_DEBUG.md  API_REFERENCE.md  CODE_PATTERNS.md  EXECUTIVE_SUMMARY.md  EXTENDED_NEGATION_RESULTS.md  IMPLEMENTATION_PLAN.md  INDEX.md  NEGATION_EMBEDDING_TRACE.md  NEGATION_TEST_RESULTS.md  NEGATION_TEST_VERIFICATION_SUMMARY.md  VISUALIZATION_GUIDE.md  resonance_rag_spec.md
src/: __init__.py  __main__.py  main.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  baseline_retriever.py  demo_without_resonance.py  doc_processor.py  evaluator.py  main.py  resonance_client.py  wave_mapper.py
src/ui/: __init__.py  main_window.py
src/utils/: __init__.py  export.py  file_handler.py  logger.py
tests/: conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_export.py  test_file_handler.py  test_logger.py
venv_fresh/Scripts/: activate  activate.bat
venv_test/Scripts/: activate  activate.bat
